--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -581,6 +581,30 @@ input[type='checkbox'] {
   font-weight: 700;
 }
 
+.typewriter {
+  font-family: poppins;
+  font-size: 24px;
+  white-space: pre;
+  overflow: hidden;
+  animation-delay: 2s;
+}
+
+.cursor {
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 #hero p {
   width: 80%;
   animation-delay: 0.4s;
@@ -641,7 +665,17 @@ input[type='checkbox'] {
   }
 
   #hero h2 {
-    font-size: 28px;
+    font-size: 24px;
+  }
+
+  #hero p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 500px){
+  #hero h2{
+    font-size: 18px;
   }
 }
 
